# reverseproxy

./: .gitignore  README.md  main.py  pyproject.toml  readme.md
backup/dockerfiles/: server.dockerfile
backup/examples/: client.py  server.py
backup/experimental/: main.py
backup/src/reverseproxy/: reverseproxy.py
backup/src/tui/: tui.py
backup/src/webui/: index.html  webui.py
docs/: implementation_journal.md
docs/examples/: step1_1.py  step1_2.py  step1_3.py  step2_1.py  step2_2.py  step3_2.py  step4_1.py  step4_2.py  step4_3.py  step4_4.py  step5_1.py  step5_2.py  step5_3.py  step6_1.py  step6_2.py  step6_3.py  step7_1.py  step7_2.py
docs/pikimov/: reverseproxy.pikimov
example/: echo.py  interactive_client.py
examples/: client.py  echo.py  server.py
examples/backup/: _asyncio.py  client.py
examples/clients/: interactive.py
examples/reverseproxy/: async.py  sync.py
examples/servers/pipes/: echo.py
examples/servers/sockets/: echo.py
experiment_asyncio/: main.py
server/: client.py  multiple_clients.py  server.py
simple_socket/: client.py
sockets/: server.py
src/: main.py  reverseproxy.py  utilities.py  utils.py  webui.html  webui.js  webui.py
src/reverseproxy/: main.py  reverseproxy.py
src/reverseproxy/ui/terminal/: terminal.py  terminal.tcss
src/tui/: tui.py  tui.tcss
src/webui/: index.html  webui.py
study/server/: async_server.py
study/subprocess/: sync_server.py
studying/server/: client.py  server.py
