[project]
name = "reverseproxy"
version = "0.0.1"
description = "One server for each client"
requires-python = ">=3.10"
authors = [{ name = "Bekir Altindal", email = "bekir.altindal@rwth-aachen.de" }]
dependencies = ["aiohttp", "prompt-toolkit", "textual"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
