[project]
name = "reverseproxy"
version = "0.0.2"
description = "One Docker-Container for each connecting Browser"
requires-python = "==3.14.4"
authors = [{ name = "Bekir Altindal", email = "bekir.altindal@rwth-aachen.de" }]
dependencies = [
    "docker == 7.1.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]